--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,17 +3,17 @@
 
   <item
     android:id="@+id/navigation_home"
-    android:icon="@drawable/ic_home_black_24dp"
+    android:icon="@drawable/ic_baseline_cottage"
     android:title="@string/title_home"/>
 
   <item
-    android:id="@+id/navigation_dashboard"
-    android:icon="@drawable/ic_dashboard_black_24dp"
+    android:id="@+id/saved_item"
+    android:icon="@drawable/ic_baseline_bookmark"
     android:title="@string/title_saved"/>
 
   <item
-    android:id="@+id/navigation_notifications"
-    android:icon="@drawable/ic_notifications_black_24dp"
+    android:id="@+id/search"
+    android:icon="@drawable/ic_baseline_search"
     android:title="@string/title_search"/>
 
 </menu>
