adding converters in progress

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -25,23 +25,12 @@
     android:src="@drawable/ic_baseline_bookmark"
     android:tooltipText="@string/save_item"
     android:visibility="visible"
+    android:autofillHints="@string/save_item"
     app:layout_constraintBottom_toTopOf="@+id/searchView"
     app:layout_constraintDimensionRatio="1:2"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintStart_toEndOf="@+id/searchView"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.0"/>
-  <!--  <TextView-->
-<!--    android:id="@+id/text_notifications"-->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="wrap_content"-->
-<!--    android:layout_marginTop="8dp"-->
-<!--    android:layout_marginStart="8dp"-->
-<!--    android:layout_marginEnd="8dp"-->
-<!--    android:textAlignment="center"-->
-<!--    android:textSize="20sp"-->
-<!--    app:layout_constraintBottom_toBottomOf="parent"-->
-<!--    app:layout_constraintEnd_toEndOf="parent"-->
-<!--    app:layout_constraintStart_toStartOf="parent"-->
-<!--    app:layout_constraintTop_toTopOf="parent"/>-->
+
 </androidx.constraintlayout.widget.ConstraintLayout>
