--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,12 +7,12 @@
     android:title="@string/title_home"/>
 
   <item
-    android:id="@+id/saved_item"
+    android:id="@+id/navigation_saved_items"
     android:icon="@drawable/ic_baseline_bookmark"
     android:title="@string/title_saved"/>
 
   <item
-    android:id="@+id/search"
+    android:id="@+id/navigation_search"
     android:icon="@drawable/ic_baseline_search"
     android:title="@string/title_search"/>
 
