--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,19 +5,47 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context=".controller.home.HomeFragment">
+  android:padding="8dp"
+  tools:context=".controller.HomeFragment">
+
+
 
   <TextView
-    android:id="@+id/text_home"
-    android:layout_width="match_parent"
+    android:layout_width="0dp"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
-    android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp"
-    android:textAlignment="center"
-    android:textSize="20sp"
+    android:id="@+id/title"
+    android:layout_margin="8dp"
+    style="@style/TextAppearance.MaterialComponents.Subtitle1"
+    tools:text="Final Report of the Small Business Advocacy Review Panel on EPA's Planned Proposed Rule: Lead-Based Paint; Certification and Training; Renovation and Remodeling Requirements (part 1 of 4)"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"/>
+  <TextView
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:id="@+id/last_modified"
+    android:layout_margin="8dp"
+    style="@style/TextAppearance.MaterialComponents.Caption"
+    tools:text="last modified: 07/31/2021"
+    app:layout_constraintTop_toBottomOf="@id/title"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"/>
+  <ScrollView
+    android:id="@+id/scrollView"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    android:layout_margin="8dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"/>
+    app:layout_constraintTop_toBottomOf="@id/last_modified">
+
+    <TextView
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:id="@+id/highlighted_content"
+      style="@style/TextAppearance.MaterialComponents.Body2"/>
+      
+  </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
