--- a/app/src/main/res/layout/fragment_saved_objects.xml
+++ b/app/src/main/res/layout/fragment_saved_objects.xml
@@ -5,25 +5,27 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context=".controller.saved.SavedFragment">
-
-
-  <ListView
+  tools:context=".controller.SavedFragment">
+  <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:saveEnabled="true"/>
+    android:orientation="vertical">
 
-<!--  <TextView-->
-<!--    android:id="@+id/text_dashboard"-->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="wrap_content"-->
-<!--    android:layout_marginTop="8dp"-->
-<!--    android:layout_marginStart="8dp"-->
-<!--    android:layout_marginEnd="8dp"-->
-<!--    android:textAlignment="center"-->
-<!--    android:textSize="20sp"-->
-<!--    app:layout_constraintBottom_toBottomOf="parent"-->
-<!--    app:layout_constraintEnd_toEndOf="parent"-->
-<!--    app:layout_constraintStart_toStartOf="parent"-->
-<!--    app:layout_constraintTop_toTopOf="parent"/>-->
+    <EditText
+      android:id="@+id/edittext"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_margin="16dp"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+
+      android:id="@+id/recyclerView"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:background="@android:color/darker_gray"
+      android:padding="4dp"
+      android:scrollbars="vertical"/>
+
+  </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
