--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,19 @@
 
   <fragment
     android:id="@+id/navigation_home"
-    android:label="@string/title_home"
-    android:name="edu.cnm.deepdive.wethepeople.controller.home.HomeFragment"
+    android:label="@string/label_home"
+    android:name="edu.cnm.deepdive.wethepeople.controller.HomeFragment"
     tools:layout="@layout/fragment_home"/>
 
   <fragment
-    android:id="@+id/navigation_dashboard"
+    android:id="@+id/navigation_saved_items"
     android:label="@string/title_saved"
-    android:name="edu.cnm.deepdive.wethepeople.controller.saved.SavedFragment"
+    android:name="edu.cnm.deepdive.wethepeople.controller.SavedFragment"
     tools:layout="@layout/fragment_saved_objects"/>
 
   <fragment
     android:id="@+id/navigation_search"
     android:label="@string/title_search"
-    android:name="edu.cnm.deepdive.wethepeople.controller.search.SearchFragment"
+    android:name="edu.cnm.deepdive.wethepeople.controller.SearchFragment"
     tools:layout="@layout/fragment_search"/>
 </navigation>
