--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -19,10 +19,12 @@
       android:id="@+id/title"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
+      android:ellipsize="end"
+      android:singleLine="true"
       style="@style/TextAppearance.MaterialComponents.Subtitle2"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintEnd_toStartOf="@id/save_item"
       tools:text="EPA definitions"
       android:layout_margin="4dp"/>
 
@@ -35,8 +37,20 @@
       style="@style/TextAppearance.MaterialComponents.Caption"
       app:layout_constraintTop_toBottomOf="@id/title"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintEnd_toStartOf="@id/save_item"
       tools:text="Last Modified: 7/21/21"/>
+
+    <ImageButton
+      android:contentDescription="@string/save_item"
+      android:id="@+id/save_item"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:src="@drawable/ic_baseline_bookmark"
+      android:background="?android:selectableItemBackground"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintTop_toTopOf="parent"/>
+
+
 
   </androidx.constraintlayout.widget.ConstraintLayout>
 
